--- a/views/gloss.html
+++ b/views/gloss.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-</head>
-<body>
-    <h1>About</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chivo:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="/styles/body.css" />
+    <title>about</title>
+  </head>
+  <body>
+    <nav>
+      <ol>
+        <ul>
+          <a href="/home">home</a>
+        </ul>
+        <ul>
+          <a href="/about">about</a>
+        </ul>
+        <ul>
+          <a href="/examples">examples</a>
+        </ul>
+        <ul>
+          <a href="/gallery">gallery</a>
+        </ul>
+      </ol>
+    </nav>
+    <h1>Common qualities of Immersive Sims</h1>
+    <ul>
+      <li>Environments offer complex systems-based options</li>
+      <li>Players can miss content due to their style of play and choices</li>
+      <li>Emergent gameplay with some level of simulation</li>
+      <li>Creative problem-solving is encouraged and leads to various playthrough routes</li>
+      <li>Difficult to market</li>
+      <li>Often under-performing sales</li>
+  </body>
 </html>
