--- a/views/landing.html
+++ b/views/landing.html
@@ -3,17 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chivo:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Immersive Sims</title>
+    <link rel="stylesheet" type="text/css" href="/styles/body.css" />
+    <title>immersive Sims</title>
   </head>
   <body>
+    <nav>
+      <ol>
+        <ul>
+          <a href="/home">home</a>
+        </ul>
+        <ul>
+          <a href="/about">about</a>
+        </ul>
+        <ul>
+          <a href="/examples">examples</a>
+        </ul>
+        <ul>
+          <a href="/gallery">gallery</a>
+        </ul>
+      </ol>
+    </nav>
     <h1>What is an Immersive Sim?</h1>
 
-    <ul>
-      <li>environments that offer complex systems-based options to players</li>
-      <li>games that are unafraid to let players miss content</li>
-      <li>often an element of social simulation</li>
-      <li>allow and encourage creative problem-solving and various routes</li>
+   
     </ul>
   </body>
 </html>
