--- a/views/titles.html
+++ b/views/titles.html
@@ -3,10 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chivo:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Works</title>
+    <link rel="stylesheet" type="text/css" href="/styles/body.css" />
+    <title>works</title>
   </head>
   <body>
+    <nav>
+      <ol>
+        <ul>
+          <a href="/home">home</a>
+        </ul>
+        <ul>
+          <a href="/about">about</a>
+        </ul>
+        <ul>
+          <a href="/examples">examples</a>
+        </ul>
+        <ul>
+          <a href="/gallery">gallery</a>
+        </ul>
+      </ol>
+    </nav>
     <h1>Works</h1>
   </body>
 </html>
