--- a/views/album.html
+++ b/views/album.html
@@ -3,10 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chivo:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Album</title>
+    <link rel="stylesheet" type="text/css" href="/styles/body.css" />
+    <link rel="stylesheet" href="/styles/gallery.css" />
+    <title>Gallery</title>
   </head>
   <body>
-    <h1>Album</h1>
+    <nav>
+      <ol>
+        <ul>
+          <a href="/home">home</a>
+        </ul>
+        <ul>
+          <a href="/about">about</a>
+        </ul>
+        <ul>
+          <a href="/examples">examples</a>
+        </ul>
+        <ul>
+          <a href="/gallery">gallery</a>
+        </ul>
+      </ol>
+    </nav>
+    <h1>gallery</h1>
+
+    <div>
+      <img src="/images/system-shock-2.bmp" class="gallery__img" alt="system shock 2 cover" />
+      <img src="/images/deus-ex.bmp" alt="deus ex cover" />
+      <img src="/images/thief-2.bmp" alt="" />
+    </div>
+    <div>
+      <img src="/images/bioshock.bmp" alt="bioshock cover" />
+      <img src="/images/dishonored.bmp" alt="dishonored cover" />
+      <img src="/images/dishonored-2.bmp" alt="" />
+    </div>
+
+    <!-- system shock, deus ex, thief, bio shock, dishonored, dishonored 2, prey, devinity hitman 1 - 3 -->
   </body>
 </html>
