second friday push

--- a/views/album.html
+++ b/views/album.html
@@ -24,7 +24,7 @@
           <a href="/about">about</a>
         </ul>
         <ul>
-          <a href="/examples">examples</a>
+          <a href="/reading">reading</a>
         </ul>
         <ul>
           <a href="/gallery">gallery</a>
@@ -41,7 +41,10 @@
     <div>
       <img src="/images/bioshock.bmp" alt="bioshock cover" />
       <img src="/images/dishonored.bmp" alt="dishonored cover" />
-      <img src="/images/dishonored-2.bmp" alt="" />
+      <img src="/images/dishonored-2.bmp" alt="dishonored 2 cover" />
+    </div>
+    <div>
+      <img src="/images/hitman.bmp" alt="hitman 1-3 covers" />
     </div>
 
     <!-- system shock, deus ex, thief, bio shock, dishonored, dishonored 2, prey, devinity hitman 1 - 3 -->
