--- a/views/gloss.html
+++ b/views/gloss.html
@@ -23,7 +23,7 @@
           <a href="/about">about</a>
         </ul>
         <ul>
-          <a href="/examples">examples</a>
+          <a href="/reading">reading</a>
         </ul>
         <ul>
           <a href="/gallery">gallery</a>
