--- a/views/landing.html
+++ b/views/landing.html
@@ -23,16 +23,22 @@
           <a href="/about">about</a>
         </ul>
         <ul>
-          <a href="/examples">examples</a>
+          <a href="/reading">reading</a>
         </ul>
         <ul>
           <a href="/gallery">gallery</a>
         </ul>
       </ol>
     </nav>
-    <h1>What is an Immersive Sim?</h1>
+    <h1>what is an Immersive Sim?</h1>
 
-   
+   <p>
+    Immersive sims by definition allow for multiple approaches, and typically incorporate elements of multiple genres, including role-playing games, stealth, first-person shooters, platform games and survival horror. Although they typically have smaller worlds than open world games, they also generally allow for open-ended gameplay, allowing the player to progress in any order and pursue side missions alongside any main story missions. Immersive sims are generally compared to games developed by Looking Glass Studios. The first such game generally considered an immersive sim is Ultima Underworld: The Stygian Abyss, and other examples include Thief and Thief 2, System Shock and System Shock 2, as well as the first Deus Ex.
+<br>
+The term "immersive sim" may also be used to describe the game design philosophy behind the immersive sim genre, which uses interacting, reactive and consistent game systems to create emergent gameplay and a sense of player agency.
+<br>
+- Wikipedia
+   </p>
     </ul>
   </body>
 </html>
