--- a/views/titles.html
+++ b/views/titles.html
@@ -23,13 +23,23 @@
           <a href="/about">about</a>
         </ul>
         <ul>
-          <a href="/examples">examples</a>
+          <a href="/reading">reading</a>
         </ul>
         <ul>
           <a href="/gallery">gallery</a>
         </ul>
       </ol>
     </nav>
-    <h1>Works</h1>
+    <h1>reading</h1>
+
+    <ul>
+      <li>
+        <a
+          href="https://www.blog.radiator.debacle.us/2017/10/the-second-death-of-immersive-sim-2007.html"
+        >
+          The second death of the immersive sim (2007-2017)
+        </a>
+      </li>
+    </ul>
   </body>
 </html>
